<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Modality extends Model
{
    use HasFactory;

    protected $fillable = [
        'name',
        'active',
    ];

    public function workShifs(): HasMany
    {
        return $this->hasMany(WorkShift::class);
    }

}
